<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dloHaiti New</string>
    <string name="action_configuration">Konfigirasyon</string>
    <string name="record_new_reading_button">Dyagnostik</string>
    <string name="manual_sync_button">Manual Sync</string>
    <string name="title_activity_enter_reading">Entrer une nouvelle mesure</string>
    <string name="ok">Bon</string>
    <string name="not_ok">Pas bon</string>
    <string name="button_save">Anrejistre</string>
    <string name="dialog_save">Anrejistre</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="server_status_checking_label">Verifikasyon koneksyon</string>
    <string name="sending_readings_message">Envoi de données vers le serveur</string>
    <string name="no_readings_msg">Tout a déjà été synchronisé!</string>
    <string name="send_error_msg">Erreur lors de l\'envoi des %1$d pour des lectures %2$d pour les ventes %3$d pour les comptes clients %4$d pour les sponsors %5$d payments
    </string>
    <string name="send_success_msg">Bravo! Transmis au serveur:\n\t%1$d lectures \n\t %2$d ventes \n\t%3$d accounts \n\t%4$d sponsors \n\t%5$d payments
    </string>
    <string name="server_status_content_description">Etat du serveur</string>
    <string name="new_sale_button">Nouvelle vente</string>
    <string name="title_activity_enter_sale">Nouvelle vente</string>
    <string name="checkout">Etat du serveur</string>
    <string name="kiosk_id_hint">Nom du kiosque</string>
    <string name="title_activity_configuration">Configuration du kiosque</string>
    <string name="kiosk_password_hint">Mot de passe</string>
    <string name="delivery_tracking_button">Suivi des livraisons</string>
    <string name="accounts_button">Kont</string>
    <string name="title_activity_delivery_tracking">Suivi des livraisons</string>
    <string name="out_for_delivery_button">Sortie pour livraison</string>
    <string name="returned_button">Retour</string>
    <string name="data_save_successful">Données enregistrées</string>
    <string name="data_save_error">Echec lors de l’enregistrement des données</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="next">Suivant &gt;</string>
    <string name="title_activity_enter_promotion">Promosyon</string>
    <string name="order_total">Total commande:</string>
    <string name="new_total">Nouveau total:</string>
    <string name="zero">0</string>
    <string name="default_currency">HTG</string>
    <string name="title_activity_select_sampling_site">Sélectionner le point de collecte des échantillons</string>
    <string name="view_reports_button">Rapò</string>
    <string name="title_activity_view_reports">Rapò</string>
    <string name="update_configuration">Konfigirasyon miz a jou</string>
    <string name="fetch_configuration_failed">Erreur lors du chargement de la configuration</string>
    <string name="fetch_configuration_succeeded">La configuration a été chargée avec succès</string>
    <string name="update_configuration_failed">La mise à jour de la configuration sur l’appareil a échouée</string>
    <string name="server_url_hint">Adresse du serveur</string>
    <string name="loading_configuration">Telechajman done sistèm lan…</string>
    <string name="select_sampling_site_caption">Sélectionner site</string>
    <string name="previous">&lt; Precedent</string>
    <string name="last_updated_label">Dènye miz a jou:</string>
    <string name="please_correct_message">Mercie de corriger!</string>
    <string name="saved_message">Anrejistre!</string>
    <string name="error_not_saved_message">Une erreur est survenue. Les donnees n\'ont pas ete enregistrees!</string>
    <string name="continue_text">Continuer</string>
    <string name="back_text">Arrière</string>
    <string name="view_new_sale_button">Nouvo vant</string>
    <string name="all_customers_text">Afiche lis kliyan</string>
    <string name="search_customer_text">Recherche client</string>
    <string name="no_configuration_error_title">
        Aucune configuration trouvée
    </string>
    <string name="no_configuration_error_message">
        S\'il vous plaît mettre à jour la configuration de passer à la page principale -> Paramètres -> Configuration ->
        Configuration de mise à jour
    </string>
    <string name="cancel_sale_confirm_dialog_message">Eske ou vle anile tranzaksyon sa?</string>
    <string name="cancel_sale_confirm_dialog_title">Aprouve</string>
    <string name="yes_button_label">Oui</string>
    <string name="no_button_label">Aucun</string>
    <string name="enter_quantity_hint">Kantite</string>
    <string name="add_product_to_cart">Ajoute</string>
    <string name="search_product_text">Recherche Produit</string>
    <string name="applied_promotions_label">Promosyon ki aplike a</string>
    <string name="total_price_label">Pri Total:</string>
    <string name="discounted_price_label">Pri ak rabè:</string>

    <string name="payment_mode_label">Mòd pèman</string>
    <string name="payee_label">Moun kap peye a</string>
    <string name="sponsor_label">Sponsò</string>
    <string name="sponsor_payment_amount_label">Montan sponsò peye a</string>
    <string name="payment_type_label">Tip pèman</string>
    <string name="customer_amount_label">Montant à la clientèle</string>
    <string name="delivery_time_label">Tan livrezon</string>
    <string name="payment_summary_label">Istorik pèman</string>
    <string name="customer_payment_label">Pèman kliyan</string>
    <string name="sponsor_payment_label">Pèman sponsor</string>
    <string name="total_price_summary_label">Pri total vant lan</string>
    <string name="amount_due_summary_label">Balans sou montan vant lan</string>

    <string name="sale_confirm_dialog_message">Tranzaksyon an anrejistre</string>

    <string name="no_products_in_cart_error_message">Tanpri, ajoute produi pou kontinue</string>
    <string name="no_products_in_cart_error_title">Aucun produit n\'a été ajouté</string>
    <string name="waterQualityBtn">Kalite dlo</string>
    <string name="flowMeter">débitmètre</string>
    <string name="flow_header_site">Izin</string>
    <string name="flow_header_value">Valè</string>
    <string name="flow_header_unit">Inite</string>
    <string name="submit_button">Soumèt</string>
    <string name="parameter_header">Paramèt</string>
    <string name="range_header">gamme</string>
    <string name="add_customer_account">Ajoute kliyan</string>
    <string name="cart_menu_item_title">Djakout ({0})</string>
    <string name="product_added_message">Produi ki nan djakout la</string>
    <string name="sponsor_payment_amount_hint">Commanditaire de Paiement Montant</string>
    <string name="customer_amount_hint">Montan</string>
    <string name="customer_name_label">Non kliyan</string>
    <string name="customer_name_hint">entrez le nom du client</string>
    <string name="customer_phone_label">Telefòn</string>
    <string name="customer_phone_hint">entrer le numéro de téléphone</string>
    <string name="customer_GPS_label">Adrès (GPS)</string>
    <string name="customer_address_label">Adrès ( Notes / repère )</string>
    <string name="customer_address_hint"/>
    <string name="organisation_label">Nom biznis la</string>
    <string name="organisation_hint">Enter Organisation</string>
    <string name="sales_channel_label">Kanal vant</string>
    <string name="balance_amount_label">Antre montan pèman</string>
    <string name="balance_amount_button">OK</string>
    <string name="make_payment">Pase on pèman</string>
    <string name="do_manual_sync_msg">There are un synced items. Please do manual sync</string>
    <string name="customer_type_label">Tip kliyan</string>
    <string name="customer_only_label">Kliyan sèlman</string>
    <string name="with_sponsor_label">Ak sponsò</string>
    <string name="mandatory_field">This field is mandatory</string>
    <string name="customer_account">Kont kliyan</string>
    <string name="sponsors">Sponsò</string>
    <string name="error_enter_sponsor_amount">Tanpri, antre montan sponsò a</string>
    <string name="error_enter_customer_amount">Tanpri, antre montan klliyan</string>
    <string name="error_sponsor_customer_amount_greater_than_total">Montant sponsò ak montan kliyan plis pase pri total la. Tanpri, verifye chif ou yo
    </string>
    <string name="search_sponsor_text">Chache sponsò</string>
    <string name="sponsor_name_label">Nom du parrain</string>
    <string name="sponsor_name_hint">Entrez le nom du promoteur</string>
    <string name="sponsor_contact_name_label">Non kontak</string>
    <string name="sponsor_contact_name_hint">Entrez Nom du contact</string>
    <string name="select_customer_label">Kliyan</string>
    <string name="add_sponsor_account">Ajoute nouvo sponsò</string>
    <string name="longitude_hint">Entrez degré de longitude</string>
    <string name="latitude_hint">Entrez degré de latitude</string>
    <string name="select_sales_channel_and_customer">Seleksyone kanal vant lan e kliyan</string>
    <string name="select_products">Seleksyone produi</string>
    <string name="sale_summary_and_promotions">Vente Résumé et Promotions</string>
    <string name="payment_activity_label">Pèman</string>
    <string name="water_quality_reading">Lektu kalite dlo</string>
    <string name="edit_label">Modifye</string>
    <string name="balance_label">Balans</string>
    <string name="select_diagnostic">Seleksyone Dyagnostik</string>
    <string name="today">Jodia</string>
    <string name="yesterday">Yè</string>
    <string name="accounts_label">Kont</string>
    <string name="sponsors_title_label">Sponsò</string>
    <string name="flow_meter_readings">Flow Meter Readings</string>
    <string name="customer_accounts_label">Kont kliyan</string>
    <string name="no_promotions_label">Pa gen pwomosyon disponib sou pwodui sa</string>
    <string name="confirm_button">Konfime</string>
</resources>