<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/customer_list_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="2dip"
    android:gravity="center"
    android:paddingRight="1dip"
    android:weightSum="100">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/customer_edit"
        style="@style/table_header"
        android:text="@string/edit_label"
        android:layout_width="0dp"

        android:layout_weight="8"
        android:layout_height="match_parent" />
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/customer_name"
        style="@style/table_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="32"
        android:text="@string/customer_name_label"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/customer_organization"
        android:layout_weight="30"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/table_header"
        android:text="@string/organisation_label"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/customer_phone"
        style="@style/table_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:text="@string/customer_phone_label"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/customer_balance"
        style="@style/table_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:text="@string/balance_label"/>

</LinearLayout>
