<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:gravity="top"
            android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true">

        <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:contentDescription="@string/server_status_content_description"
                android:id="@+id/statusImage"
                android:visibility="invisible"
                android:scaleType="fitXY"
                android:layout_toLeftOf="@+id/button"
                android:layout_above="@+id/button"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_status_checking_label"
                android:id="@+id/serverStatusTextView"
                android:layout_toRightOf="@+id/serverStatusProgressBar"
                android:layout_centerVertical="true"
                android:textSize="20dp"/>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serverStatusProgressBar"
                android:layout_alignLeft="@+id/statusImage"
                android:layout_alignBottom="@+id/statusImage"/>
    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

        <Button
                style="@style/home_screen_button"
                android:onClick="moveToNewSaleScreen"
                android:text="@string/new_sale_button"
                android:id="@+id/new_sale_button"
                android:drawableLeft="@drawable/ic_menu_all_customers"
            />

        <Button
                style="@style/home_screen_button"
                android:onClick="moveToAccountsScreen"
                android:text="@string/accounts_button"
                android:id="@+id/accounts_button"/>

        <Button
                style="@style/home_screen_button"
                android:onClick="moveToSelectSamplingSite"
                android:text="@string/record_new_reading_button"
                android:id="@+id/button"/>

        <Button
                style="@style/home_screen_button"
                android:onClick="moveToViewReports"
                android:text="@string/view_reports_button"
                android:id="@+id/view_reports"/>

        <Button
                style="@style/home_screen_button"
                android:onClick="moveToSelectSalesChannelScreen"
                android:text="@string/view_new_sale_button"
                android:id="@+id/view_new_sale"/>
    </LinearLayout>

</RelativeLayout>