<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"  android:background="@color/activity_background">
    <ScrollView
        android:layout_width="fill_parent"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/row_height"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">
            <LinearLayout
                style="@style/customer_form_row">
                <TextView
                    android:id="@+id/sponsor_name_label"
                    style="@style/payment_form_field"
                    android:text="@string/sponsor_name_label"/>
                <EditText
                    android:id="@+id/sponsor_name"
                    style="@style/payment_form_field"
                    android:hint="@string/sponsor_name_hint"/>
            </LinearLayout>

            <ImageView style="@style/horizontal_divider"/>
            <LinearLayout
                style="@style/customer_form_row">
                <TextView
                    android:id="@+id/sponsor_contact_name_label"
                    style="@style/payment_form_field"
                    android:text="@string/sponsor_contact_name_label"/>
                <EditText
                    android:id="@+id/sponsor_contact_name"
                    style="@style/payment_form_field"
                    android:hint="@string/sponsor_contact_name_hint"/>
            </LinearLayout>

           <ImageView style="@style/horizontal_divider"/>

            <LinearLayout
                style="@style/customer_form_row">
                <TextView
                    android:id="@+id/customer_phone_label"
                    style="@style/payment_form_field"
                    android:text="@string/customer_phone_label"/>
                <EditText
                    android:id="@+id/customer_phone"
                    android:maxLength="15"
                    style="@style/payment_form_field"
                    android:hint="@string/customer_phone_hint"/>
            </LinearLayout>

            <ImageView style="@style/horizontal_divider"/>

            <LinearLayout
                style="@style/customer_form_row">
                <TextView
                    android:id="@+id/customer_label"
                    style="@style/payment_form_field"
                    android:text="@string/select_customer_label"/>
                <com.dlohaiti.dlokiosknew.MultiSelectSpinner
                    android:id="@+id/accounts"
                    style="@style/payment_form_field"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottom_pane"
        style="@style/bottom_navigation_pane"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/cancel_button"
            style="@style/navigation_button"
            android:layout_alignParentLeft="true"
            android:onClick="onCancel"
            android:visibility="gone"
            android:src="@drawable/cancel_button" />

        <Button
            android:id="@+id/save_button"
            style="@style/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onSave"
            android:text="@string/submit_button" />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/back_button"
            style="@style/navigation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/save_button"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:src="@drawable/back_button" />

    </RelativeLayout>
</RelativeLayout>