<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="100">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
        <Button
                android:id="@+id/all_customers_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/toggle_button_selector"
                android:text="@string/all_customers_text"
                android:onClick="onAllCustomersButtonClick"/>

        <Button
                android:id="@+id/customers_for_selected_sales_channel_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/toggle_button_selector"
                android:text="Sales Channel"
                android:onClick="onCustomersForSelectedSalesChannelButtonClick"/>

    </LinearLayout>

    <TextView
            style="@style/list_header"
            android:text="@string/customer_list_header"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="#d9d9d9"/>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="88"
            android:id="@+id/customer_list"
            android:dividerHeight="1dp"
            android:divider="#d9d9d9">
    </ListView>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="#d9d9d9"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="12">
        <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                style="@style/navigation_button"
                android:text="@string/back_text"
                android:onClick="onBack"/>

        <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                style="@style/navigation_button"
                android:text="@string/continue_text"
                android:onClick="onContinue"/>
    </RelativeLayout>

</LinearLayout>